# ODE-RUST

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.ini
src/: conf_parse.rs  main.rs
src/DE_evolution/: mod.rs  solver.rs  state_plot.rs
src/diffeq_define/: DiffEqs.md  harmonic_oscillator.rs  hh_neuron.rs  lorenz_attractor.rs  mod.rs
src/diffeq_evolve/: solver.rs  state_plot.rs
src/utils/: conf_parse.rs  mod.rs
