[package]
name = "PDE"
versions = "0.0.1"
authors = ["PritManGuy"]
edition = "2021"

[dependencies]
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
rand = "0.9.0"
rand_distr = "0.5.1"
csv = "1.3.1"
ode_solvers = "0.6.1"
serde = "1.0.219"
toml = "0.8.20"

[[bin]]
name = "conf_parse"
path = "src/conf_parse.rs"

